refactoring history + model manager

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0bc0753",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "HistoryManager.__init__() missing 1 required positional argument: 'start_str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      6\u001b[39m load_dotenv()\n\u001b[32m      8\u001b[39m client = Client(api_key=os.getenv(\u001b[33m\"\u001b[39m\u001b[33mBINANCE_API_KEY\u001b[39m\u001b[33m\"\u001b[39m), api_secret=os.getenv(\u001b[33m\"\u001b[39m\u001b[33mBINANCE_API_SECRET\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m hm = \u001b[43mHistoryManager\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m    \u001b[49m\u001b[43mclient\u001b[49m\u001b[43m=\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m    \u001b[49m\u001b[43msymbol\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mBTCUSDT\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m    \u001b[49m\u001b[43minterval\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m1h\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtimelag\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m16\u001b[39;49m\n\u001b[32m     16\u001b[39m \u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: HistoryManager.__init__() missing 1 required positional argument: 'start_str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from managers.history_manager import HistoryManager\n",
+    "from managers.model_manager import ModelManager\n",
     "from binance.client import Client\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -35,13 +24,393 @@
     "    symbol=\"BTCUSDT\",\n",
     "    interval=\"1h\",\n",
     "    timelag=16\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "mm = ModelManager(\n",
+    "    predictor_cols=hm.predictor_cols,\n",
+    "    model_name=\"hgb\", # \"logreg\", \"sgdlog\", \"rf\", \"hgb\", \"linsvc\"\n",
+    "    class_weight=\"balanced\",\n",
+    "    random_state=42,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6eaf66f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1756890000000"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hm.last_closed_open_time_ms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "167c14bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EMA</th>\n",
+       "      <th>MINUSDM</th>\n",
+       "      <th>PLUSDM</th>\n",
+       "      <th>CLOSE</th>\n",
+       "      <th>CLOSEL1</th>\n",
+       "      <th>CLOSEL2</th>\n",
+       "      <th>PATT_3OUT</th>\n",
+       "      <th>PATT_CMB</th>\n",
+       "      <th>RSI</th>\n",
+       "      <th>MACD</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BB_MIDDLE</th>\n",
+       "      <th>BB_LOWER</th>\n",
+       "      <th>BB_WIDTH</th>\n",
+       "      <th>OBV</th>\n",
+       "      <th>MFI</th>\n",
+       "      <th>AD</th>\n",
+       "      <th>ADOSC</th>\n",
+       "      <th>STOCH_K</th>\n",
+       "      <th>STOCH_D</th>\n",
+       "      <th>UP_DOWN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>2.340000e+04</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>2.340000e+04</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "      <td>23400.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>60873.803146</td>\n",
+       "      <td>1407.532787</td>\n",
+       "      <td>1357.272873</td>\n",
+       "      <td>60904.033832</td>\n",
+       "      <td>60899.998691</td>\n",
+       "      <td>60895.968832</td>\n",
+       "      <td>0.030342</td>\n",
+       "      <td>0.106154</td>\n",
+       "      <td>51.120447</td>\n",
+       "      <td>28.112150</td>\n",
+       "      <td>...</td>\n",
+       "      <td>60873.772545</td>\n",
+       "      <td>60096.162903</td>\n",
+       "      <td>0.025135</td>\n",
+       "      <td>1.518168e+06</td>\n",
+       "      <td>50.557484</td>\n",
+       "      <td>1.824400e+06</td>\n",
+       "      <td>336.875247</td>\n",
+       "      <td>52.540046</td>\n",
+       "      <td>52.540860</td>\n",
+       "      <td>0.509915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>30369.929840</td>\n",
+       "      <td>1205.884169</td>\n",
+       "      <td>1048.873781</td>\n",
+       "      <td>30379.849480</td>\n",
+       "      <td>30379.445301</td>\n",
+       "      <td>30379.050957</td>\n",
+       "      <td>0.171530</td>\n",
+       "      <td>0.308041</td>\n",
+       "      <td>11.278140</td>\n",
+       "      <td>359.530818</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30372.091716</td>\n",
+       "      <td>30010.166618</td>\n",
+       "      <td>0.020450</td>\n",
+       "      <td>2.358124e+05</td>\n",
+       "      <td>16.865567</td>\n",
+       "      <td>4.631339e+05</td>\n",
+       "      <td>2524.632575</td>\n",
+       "      <td>24.314052</td>\n",
+       "      <td>23.604122</td>\n",
+       "      <td>0.499912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>16642.640147</td>\n",
+       "      <td>26.292613</td>\n",
+       "      <td>44.336893</td>\n",
+       "      <td>16622.580000</td>\n",
+       "      <td>16622.580000</td>\n",
+       "      <td>16622.580000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.348371</td>\n",
+       "      <td>-2319.577890</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16633.050625</td>\n",
+       "      <td>16532.810810</td>\n",
+       "      <td>0.001447</td>\n",
+       "      <td>3.020019e+04</td>\n",
+       "      <td>3.053455</td>\n",
+       "      <td>-1.453758e+04</td>\n",
+       "      <td>-49215.947928</td>\n",
+       "      <td>1.308173</td>\n",
+       "      <td>2.899614</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>29414.799741</td>\n",
+       "      <td>555.020223</td>\n",
+       "      <td>580.734647</td>\n",
+       "      <td>29430.765000</td>\n",
+       "      <td>29430.245000</td>\n",
+       "      <td>29430.155000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>44.076555</td>\n",
+       "      <td>-106.767787</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29418.084844</td>\n",
+       "      <td>29255.013390</td>\n",
+       "      <td>0.011785</td>\n",
+       "      <td>1.464761e+06</td>\n",
+       "      <td>38.207281</td>\n",
+       "      <td>1.520061e+06</td>\n",
+       "      <td>-292.193390</td>\n",
+       "      <td>31.823074</td>\n",
+       "      <td>32.411789</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>61201.011907</td>\n",
+       "      <td>1072.555965</td>\n",
+       "      <td>1100.784921</td>\n",
+       "      <td>61169.410000</td>\n",
+       "      <td>61168.200000</td>\n",
+       "      <td>61167.365000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>50.968904</td>\n",
+       "      <td>13.397451</td>\n",
+       "      <td>...</td>\n",
+       "      <td>61178.564063</td>\n",
+       "      <td>60406.187537</td>\n",
+       "      <td>0.018978</td>\n",
+       "      <td>1.568541e+06</td>\n",
+       "      <td>50.298497</td>\n",
+       "      <td>2.006103e+06</td>\n",
+       "      <td>77.700379</td>\n",
+       "      <td>53.155470</td>\n",
+       "      <td>52.971346</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>87688.371457</td>\n",
+       "      <td>1872.279113</td>\n",
+       "      <td>1842.432494</td>\n",
+       "      <td>87868.567500</td>\n",
+       "      <td>87854.485000</td>\n",
+       "      <td>87839.525000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>58.006824</td>\n",
+       "      <td>167.940295</td>\n",
+       "      <td>...</td>\n",
+       "      <td>87802.476875</td>\n",
+       "      <td>86341.751718</td>\n",
+       "      <td>0.031744</td>\n",
+       "      <td>1.659974e+06</td>\n",
+       "      <td>62.769590</td>\n",
+       "      <td>2.230244e+06</td>\n",
+       "      <td>532.389498</td>\n",
+       "      <td>73.631490</td>\n",
+       "      <td>73.034338</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>122508.166175</td>\n",
+       "      <td>12901.038723</td>\n",
+       "      <td>9949.274388</td>\n",
+       "      <td>123847.830000</td>\n",
+       "      <td>123847.830000</td>\n",
+       "      <td>123847.830000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>90.673497</td>\n",
+       "      <td>2390.735922</td>\n",
+       "      <td>...</td>\n",
+       "      <td>122649.358750</td>\n",
+       "      <td>121169.752413</td>\n",
+       "      <td>0.200916</td>\n",
+       "      <td>1.736033e+06</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>2.308282e+06</td>\n",
+       "      <td>46270.662616</td>\n",
+       "      <td>99.596606</td>\n",
+       "      <td>98.555894</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 EMA       MINUSDM        PLUSDM          CLOSE  \\\n",
+       "count   23400.000000  23400.000000  23400.000000   23400.000000   \n",
+       "mean    60873.803146   1407.532787   1357.272873   60904.033832   \n",
+       "std     30369.929840   1205.884169   1048.873781   30379.849480   \n",
+       "min     16642.640147     26.292613     44.336893   16622.580000   \n",
+       "25%     29414.799741    555.020223    580.734647   29430.765000   \n",
+       "50%     61201.011907   1072.555965   1100.784921   61169.410000   \n",
+       "75%     87688.371457   1872.279113   1842.432494   87868.567500   \n",
+       "max    122508.166175  12901.038723   9949.274388  123847.830000   \n",
+       "\n",
+       "             CLOSEL1        CLOSEL2     PATT_3OUT      PATT_CMB           RSI  \\\n",
+       "count   23400.000000   23400.000000  23400.000000  23400.000000  23400.000000   \n",
+       "mean    60899.998691   60895.968832      0.030342      0.106154     51.120447   \n",
+       "std     30379.445301   30379.050957      0.171530      0.308041     11.278140   \n",
+       "min     16622.580000   16622.580000      0.000000      0.000000      6.348371   \n",
+       "25%     29430.245000   29430.155000      0.000000      0.000000     44.076555   \n",
+       "50%     61168.200000   61167.365000      0.000000      0.000000     50.968904   \n",
+       "75%     87854.485000   87839.525000      0.000000      0.000000     58.006824   \n",
+       "max    123847.830000  123847.830000      1.000000      1.000000     90.673497   \n",
+       "\n",
+       "               MACD  ...      BB_MIDDLE       BB_LOWER      BB_WIDTH  \\\n",
+       "count  23400.000000  ...   23400.000000   23400.000000  23400.000000   \n",
+       "mean      28.112150  ...   60873.772545   60096.162903      0.025135   \n",
+       "std      359.530818  ...   30372.091716   30010.166618      0.020450   \n",
+       "min    -2319.577890  ...   16633.050625   16532.810810      0.001447   \n",
+       "25%     -106.767787  ...   29418.084844   29255.013390      0.011785   \n",
+       "50%       13.397451  ...   61178.564063   60406.187537      0.018978   \n",
+       "75%      167.940295  ...   87802.476875   86341.751718      0.031744   \n",
+       "max     2390.735922  ...  122649.358750  121169.752413      0.200916   \n",
+       "\n",
+       "                OBV           MFI            AD         ADOSC       STOCH_K  \\\n",
+       "count  2.340000e+04  23400.000000  2.340000e+04  23400.000000  23400.000000   \n",
+       "mean   1.518168e+06     50.557484  1.824400e+06    336.875247     52.540046   \n",
+       "std    2.358124e+05     16.865567  4.631339e+05   2524.632575     24.314052   \n",
+       "min    3.020019e+04      3.053455 -1.453758e+04 -49215.947928      1.308173   \n",
+       "25%    1.464761e+06     38.207281  1.520061e+06   -292.193390     31.823074   \n",
+       "50%    1.568541e+06     50.298497  2.006103e+06     77.700379     53.155470   \n",
+       "75%    1.659974e+06     62.769590  2.230244e+06    532.389498     73.631490   \n",
+       "max    1.736033e+06    100.000000  2.308282e+06  46270.662616     99.596606   \n",
+       "\n",
+       "            STOCH_D       UP_DOWN  \n",
+       "count  23400.000000  23400.000000  \n",
+       "mean      52.540860      0.509915  \n",
+       "std       23.604122      0.499912  \n",
+       "min        2.899614      0.000000  \n",
+       "25%       32.411789      0.000000  \n",
+       "50%       52.971346      1.000000  \n",
+       "75%       73.034338      1.000000  \n",
+       "max       98.555894      1.000000  \n",
+       "\n",
+       "[8 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hm.df_features.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eaf66f0",
+   "id": "23f56fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y_cls, y_reg = hm.dataset_dual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a47e3c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Holdout accuracy: 0.527\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = mm.train(X, y)\n",
+    "print(f\"Holdout accuracy: {acc:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cd743d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp = mm.feature_importances()\n",
+    "if imp is not None:\n",
+    "    print(imp.head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85601a97",
    "metadata": {},
    "outputs": [],
    "source": []
